// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI impact Dashboard utils generateDateRanges returns the expected date ranges in a leap year 1`] = `
Array [
  Object {
    "end": 2019-10-31T23:59:59.000Z,
    "key": "5-months-ago",
    "label": "Oct",
    "start": 2019-10-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2019-11-30T23:59:59.000Z,
    "key": "4-months-ago",
    "label": "Nov",
    "start": 2019-11-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2019-12-31T23:59:59.000Z,
    "key": "3-months-ago",
    "label": "Dec",
    "start": 2019-12-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-01-31T23:59:59.000Z,
    "key": "2-months-ago",
    "label": "Jan",
    "start": 2020-01-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-02-29T23:59:59.000Z,
    "key": "1-months-ago",
    "label": "Feb",
    "start": 2020-02-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-03-31T00:00:00.000Z,
    "key": "this-month",
    "label": "Mar",
    "start": 2020-03-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
]
`;

exports[`AI impact Dashboard utils generateDateRanges returns the expected date ranges on the first of the month 1`] = `
Array [
  Object {
    "end": 2021-02-28T23:59:59.000Z,
    "key": "5-months-ago",
    "label": "Feb",
    "start": 2021-02-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-03-31T23:59:59.000Z,
    "key": "4-months-ago",
    "label": "Mar",
    "start": 2021-03-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-04-30T23:59:59.000Z,
    "key": "3-months-ago",
    "label": "Apr",
    "start": 2021-04-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-05-31T23:59:59.000Z,
    "key": "2-months-ago",
    "label": "May",
    "start": 2021-05-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-06-30T23:59:59.000Z,
    "key": "1-months-ago",
    "label": "Jun",
    "start": 2021-06-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-07-01T00:00:00.000Z,
    "key": "this-month",
    "label": "Jul",
    "start": 2021-07-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
]
`;

exports[`AI impact Dashboard utils generateDateRanges returns the expected date ranges on the last of the month 1`] = `
Array [
  Object {
    "end": 2020-10-31T23:59:59.000Z,
    "key": "5-months-ago",
    "label": "Oct",
    "start": 2020-10-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-11-30T23:59:59.000Z,
    "key": "4-months-ago",
    "label": "Nov",
    "start": 2020-11-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-12-31T23:59:59.000Z,
    "key": "3-months-ago",
    "label": "Dec",
    "start": 2020-12-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-01-31T23:59:59.000Z,
    "key": "2-months-ago",
    "label": "Jan",
    "start": 2021-01-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-02-28T23:59:59.000Z,
    "key": "1-months-ago",
    "label": "Feb",
    "start": 2021-02-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-03-31T00:00:00.000Z,
    "key": "this-month",
    "label": "Mar",
    "start": 2021-03-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
]
`;

exports[`AI impact Dashboard utils generateSkeletonTableData returns the skeleton based on the table fields 1`] = `
Array [
  Object {
    "invertTrendColor": true,
    "metric": Object {
      "identifier": "cycle_time",
      "value": "Cycle time",
    },
  },
  Object {
    "invertTrendColor": true,
    "metric": Object {
      "identifier": "lead_time",
      "value": "Lead time",
    },
  },
  Object {
    "invertTrendColor": undefined,
    "metric": Object {
      "identifier": "deployment_frequency",
      "value": "Deployment frequency",
    },
  },
  Object {
    "invertTrendColor": true,
    "metric": Object {
      "identifier": "change_failure_rate",
      "value": "Change failure rate",
    },
  },
  Object {
    "invertTrendColor": true,
    "metric": Object {
      "identifier": "vulnerability_critical",
      "value": "Critical vulnerabilities over time",
    },
  },
  Object {
    "invertTrendColor": undefined,
    "metric": Object {
      "identifier": "code_suggestions_usage_rate",
      "value": "Code Suggestions usage",
    },
  },
]
`;

exports[`AI impact Dashboard utils generateTableColumns returns the expected table fields in a leap year 1`] = `
Array [
  Object {
    "key": "metric",
    "label": "Metric",
    "thClass": "gl-w-2/10",
  },
  Object {
    "end": 2019-10-31T23:59:59.000Z,
    "key": "5-months-ago",
    "label": "Oct",
    "start": 2019-10-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2019-11-30T23:59:59.000Z,
    "key": "4-months-ago",
    "label": "Nov",
    "start": 2019-11-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2019-12-31T23:59:59.000Z,
    "key": "3-months-ago",
    "label": "Dec",
    "start": 2019-12-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-01-31T23:59:59.000Z,
    "key": "2-months-ago",
    "label": "Jan",
    "start": 2020-01-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-02-29T23:59:59.000Z,
    "key": "1-months-ago",
    "label": "Feb",
    "start": 2020-02-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-03-31T00:00:00.000Z,
    "key": "this-month",
    "label": "Mar",
    "start": 2020-03-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "description": "Past 6 Months",
    "key": "change",
    "label": "Change (%)",
    "thClass": "gl-w-2/10",
  },
]
`;

exports[`AI impact Dashboard utils generateTableColumns returns the expected table fields on the first of the month 1`] = `
Array [
  Object {
    "key": "metric",
    "label": "Metric",
    "thClass": "gl-w-2/10",
  },
  Object {
    "end": 2021-02-28T23:59:59.000Z,
    "key": "5-months-ago",
    "label": "Feb",
    "start": 2021-02-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-03-31T23:59:59.000Z,
    "key": "4-months-ago",
    "label": "Mar",
    "start": 2021-03-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-04-30T23:59:59.000Z,
    "key": "3-months-ago",
    "label": "Apr",
    "start": 2021-04-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-05-31T23:59:59.000Z,
    "key": "2-months-ago",
    "label": "May",
    "start": 2021-05-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-06-30T23:59:59.000Z,
    "key": "1-months-ago",
    "label": "Jun",
    "start": 2021-06-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-07-01T00:00:00.000Z,
    "key": "this-month",
    "label": "Jul",
    "start": 2021-07-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "description": "Past 6 Months",
    "key": "change",
    "label": "Change (%)",
    "thClass": "gl-w-2/10",
  },
]
`;

exports[`AI impact Dashboard utils generateTableColumns returns the expected table fields on the last of the month 1`] = `
Array [
  Object {
    "key": "metric",
    "label": "Metric",
    "thClass": "gl-w-2/10",
  },
  Object {
    "end": 2020-10-31T23:59:59.000Z,
    "key": "5-months-ago",
    "label": "Oct",
    "start": 2020-10-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-11-30T23:59:59.000Z,
    "key": "4-months-ago",
    "label": "Nov",
    "start": 2020-11-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2020-12-31T23:59:59.000Z,
    "key": "3-months-ago",
    "label": "Dec",
    "start": 2020-12-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-01-31T23:59:59.000Z,
    "key": "2-months-ago",
    "label": "Jan",
    "start": 2021-01-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-02-28T23:59:59.000Z,
    "key": "1-months-ago",
    "label": "Feb",
    "start": 2021-02-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "end": 2021-03-31T00:00:00.000Z,
    "key": "this-month",
    "label": "Mar",
    "start": 2021-03-01T00:00:00.000Z,
    "thClass": "gl-w-1/10",
  },
  Object {
    "description": "Past 6 Months",
    "key": "change",
    "label": "Change (%)",
    "thClass": "gl-w-2/10",
  },
]
`;

exports[`AI impact Dashboard utils generateTableRows returns the data formatted as a table row 1`] = `
Object {
  "change_failure_rate": Object {
    "1-months-ago": Object {
      "tooltip": undefined,
      "value": "7.5%",
    },
    "2-months-ago": Object {
      "tooltip": undefined,
      "value": "0.0%",
    },
    "3-months-ago": Object {
      "tooltip": undefined,
      "value": "0.0%",
    },
    "4-months-ago": Object {
      "tooltip": undefined,
      "value": "5.6%",
    },
    "5-months-ago": Object {
      "tooltip": undefined,
      "value": "8.9%",
    },
    "change": Object {
      "tooltip": undefined,
      "value": -0.15730337078651688,
    },
    "this-month": Object {
      "tooltip": undefined,
      "value": "4.0%",
    },
  },
  "code_suggestions_usage_rate": Object {
    "1-months-ago": Object {
      "tooltip": "5/10",
      "value": "50.0%",
    },
    "2-months-ago": Object {
      "tooltip": "10/11",
      "value": "90.9%",
    },
    "3-months-ago": Object {
      "tooltip": "2/10",
      "value": "20.0%",
    },
    "4-months-ago": Object {
      "tooltip": "10/10",
      "value": "100.0%",
    },
    "5-months-ago": Object {
      "tooltip": "0/0",
      "value": "0.0%",
    },
    "change": Object {
      "tooltip": "No change",
      "value": 0,
    },
    "this-month": Object {
      "tooltip": "8/9",
      "value": "88.9%",
    },
  },
  "deployment_frequency": Object {
    "1-months-ago": Object {
      "tooltip": undefined,
      "value": "-",
    },
    "2-months-ago": Object {
      "tooltip": undefined,
      "value": "30.0/d",
    },
    "3-months-ago": Object {
      "tooltip": undefined,
      "value": "0.0/d",
    },
    "4-months-ago": Object {
      "tooltip": undefined,
      "value": "15.0/d",
    },
    "5-months-ago": Object {
      "tooltip": undefined,
      "value": "10.0/d",
    },
    "change": Object {
      "tooltip": "No data available",
      "value": "n/a",
    },
    "this-month": Object {
      "tooltip": undefined,
      "value": "30.0/d",
    },
  },
}
`;
